@@ -1460,70 +1460,6 @@ Display the result in a posframe." t)
              (consp project-switch-commands))
     (add-to-list 'project-switch-commands '(project-compile "Compile") t)))
 
-;;;; activities
-
-(after-load! activities
-  (require 'bookmark-extras)
-  (bookmark-extras-install)
-  (setq activities-kill-buffers t)
-  (activities-mode)
-  (activities-tabs-mode)
-  ;; (require 'activities-persist-buffers)
-  ;; (activities-persist-buffers-mode)
-  (setopt edebug-inhibit-emacs-lisp-mode-bindings t))
-
-(defvar +activities-tab-buffer-source
-  (list :name "Activity"
-        :narrow ?a
-        :category 'buffer
-        :state #'consult--buffer-state
-        :history 'buffer-name-history
-        :enabled (lambda () (bound-and-true-p activities-tabs-mode))
-        :default t
-        :items
-        (lambda ()
-          (consult--buffer-query
-           :sort 'visibility
-           :buffer-list (when-let* ((activity (activities-current))
-                                    (tab (activities-tabs--tab activity))
-                                    (buffer-list (activities-tabs--tab-parameter
-                                                  'activities-buffer-list tab)))
-                          (setq buffer-list (seq-filter #'buffer-live-p buffer-list))
-                          (setq buffer-list (delq (current-buffer) buffer-list))
-                          buffer-list)
-           :as #'consult--buffer-pair))))
-
-(defun +activities--fix-consult--source-buffer (&rest _)
-  (when (boundp 'consult--source-buffer)
-    (let ((hide-buffer-source (and (default-value 'activities-tabs-mode) (activities-current) t)))
-      (eval `(consult-customize consult--source-buffer :hidden ,hide-buffer-source) t))))
-
-(add-hook 'activities-tabs-mode-hook #'+activities--fix-consult--source-buffer)
-
-(after-load! (:and activities consult)
-  (+activities--fix-consult--source-buffer)
-  (add-to-list 'activities-after-switch-functions #'+activities--fix-consult--source-buffer)
-  (add-to-list 'activities-after-resume-functions #'+activities--fix-consult--source-buffer)
-  (add-to-list 'tab-bar-tab-post-select-functions #'+activities--fix-consult--source-buffer)
-  (add-to-list 'tab-bar-tab-post-open-functions #'+activities--fix-consult--source-buffer)
-  (add-to-list 'consult-buffer-sources '+activities-tab-buffer-source))
-
-(defvar-keymap activities-prefix-map
-  :doc    "Prefix map for `activities' commands."
-  :prefix 'activities-prefix-map
-  "C-n"   #'activities-new
-  "C-d"   #'activities-define
-  "C-a"   #'activities-resume
-  "C-s"   #'activities-suspend
-  "C-k"   #'activities-kill
-  "C-r"   #'activities-rename
-  "RET"   #'activities-switch
-  "b"     #'activities-switch-buffer
-  "g"     #'activities-revert
-  "l"     #'activities-list)
-
-(keymap-global-set "C-x C-a" #'activities-prefix-map)
-
 ;;;; buffer-env
 
 (add-hook 'hook-local-variables-hook #'buffer-env-update)
