@@ -118,7 +118,6 @@
 (straight-use-package 'buffer-env)
 (straight-use-package 'ws-butler)
 (straight-use-package 'popper)
-(straight-use-package 'activities)
 
 ;;; Version control
 (straight-use-package 'magit)
